kubernetes-vault/configs-k8s/example-k8s-svc-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-example-svc
spec:
  selector:
    app: nginx-example
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nginx-example-ingress

spec:
  rules:
    - host: nginx-example.34.90.132.76.xip.io
      http:
        paths:
          - backend:
              serviceName: nginx-example-svc
              servicePort: 80
            path: /
